# SuperCGOBros

./: CMakeLists.txt  README.md
src/client/: anim.c  animations.c  main.c  player.c
src/client/include/: anim.h  animations.h  animtype.h  charactersanim.h  connection.h  mainconf.h  player.h  playerconf.h  utils.h
